force-app/main/default/objects/Case/fields/Code_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Code_Issue_Date__c</fullName>
    <label>Code Issue Date</label>
    <type>Date</type>
</CustomField>