force-app/main/default/objects/Case/fields/Code_Last_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Code_Last_Sent_Date__c</fullName>
    <label>Code Last Sent Date</label>
    <type>Date</type>
</CustomField>