force-app/main/default/objects/Case/fields/Code_Redeemed_Date__c.field-meta.xml
<CustomField>
    <fullName>Code_Redeemed_Date__c</fullName>
    <label>Code Redeemed Date</label>
    <type>Date</type>
</CustomField>