force-app/main/default/objects/Case/fields/Replacement_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Promo_Code__c</fullName>
    <label>Replacement Promo Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>