force-app/main/default/objects/Case/fields/Return_Case__c.field-meta.xml
<CustomField>
    <fullName>Return_Case__c</fullName>
    <label>Return Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>